# dbt-postgres-python

.github/workflows/: poetry_lock.yml  python-release.yml  test_integration_adapter.yml
projects/adapter/: pyproject.toml
projects/adapter/integration_tests/features/steps/: fal_adapter_steps.py
projects/adapter/src/dbt/adapters/fal/: impl.py  wrappers.py
projects/adapter/src/dbt/adapters/fal_experimental/: impl.py
projects/adapter/src/dbt/adapters/fal_experimental/utils/: environments.py
projects/adapter/src/dbt/fal/adapters/python/: connections.py  impl.py
projects/adapter/src/dbt/fal/adapters/teleport/: impl.py
